added a datatable file and created a function in database.py to fetch data from the database table task

--- a/todo.kv
+++ b/todo.kv
@@ -64,6 +64,11 @@ MDFloatLayout:
                     icon: "facebook"
                     text: "facebook acc"
 
+                DrawerClickableItem:
+                    icon: "table"
+                    text: "Data table"
+                    on_release: app.table_button()
+
 <DialogContent>:
     orientation: "vertical"
     spacing: "10dp"
@@ -112,3 +117,5 @@ MDFloatLayout:
         theme_text_color: "Custom"
         text_color: 1, 0, 0, 1
         on_release: root.delete_item(the_list_item)
+
+
