updated python app and changed its name to Ubraek App

--- a/todo.kv
+++ b/todo.kv
@@ -51,6 +51,11 @@ MDFloatLayout:
                     spacing: "4dp"
                     padding: "12dp", 0, 0, "56dp"
 
+                    MDIconButton:
+                        icon: "img/Ubraen.png" 
+                        user_font_size: "70sp" 
+                        pos_hint: {"center_y": 0.5}  
+
                 MDNavigationDrawerLabel:
                     text: "Mail"
 
