added a helper for the input fields

--- a/log.kv
+++ b/log.kv
@@ -33,6 +33,8 @@
             id: Username
             hint_text: "Username"
             icon_right: "account"
+            helper_text: "Enter username"
+            helper_text_mode: "on_focus"
             font_size: "20dp"
             size_hint_x: .85
             pos_hint: {'center_x': .5, 'center_y': .65}
@@ -44,6 +46,8 @@
             hint_text: "Password"
             password: True
             icon_right: "eye-off"
+            helper_text: "Enter password"
+            helper_text_mode: "on_focus"
             font_size: "20dp"
             size_hint_x: .85
             pos_hint: {'center_x': .5, 'center_y': .5}
