--- a/main.kv
+++ b/main.kv
@@ -3,7 +3,7 @@
     MDList:
         MDNavigationDrawerHeader:
             title: "Ubraek App"
-            text: "todo application"
+            text: ""
             source: "img/Ubraen.png"
             spacing: "4dp"
             padding: "12dp", 0, 0, "56dp"
