updated about developer screen

--- a/main.kv
+++ b/main.kv
@@ -76,8 +76,20 @@ MDScreen:
                 name: "scr 2"
 
                 MDLabel:
-                    text: "Screen 2"
+                    text: "[b]Dran Leynard Gamoso[/b]\n Developer 1\n"
                     halign: "center"
+                    pos_hint: {'center_x': .5 , 'center_y': .65}
+                    markup: True
+                MDLabel:
+                    text: "[b]Shanne Marie Cabotaje[/b]\n Developer 2"
+                    halign: "center"
+                    pos_hint: {'center_x': .5 , 'center_y': .6}
+                    markup: True
+                MDLabel:
+                    text: """\nWe are [b]Dran Leynard Gamoso[/b] and [b]Shanne Marie Cabotaje[/b], two IT students who find ways to get things done. We've teamed up to create an app that helps us stay organized and focused, and we want to share it with our friends and students like us.  Our goal is to make productivy simple. We believe that even the smallest steps can lead to big achievements. Our app is here to help you take those steps every day. We think of productivity as a journey, not a race. """
+                    halign: "center"
+                    pos_hint: {'center_x': .5 , 'center_y': .5}
+                    markup: True
 
             MDScreen:
                 name: "scr 3"
