--- a/main.kv
+++ b/main.kv
@@ -12,26 +12,26 @@
             on_press:
                 root.nav_drawer.set_state("close")
                 root.screen_manager.current = "scr 1"
-           
-
         OneLineListItem:
             text: "About Developers"
             on_press:
                 root.nav_drawer.set_state("close")
                 root.screen_manager.current = "scr 2"
-
         OneLineListItem:
             text: "System Description"
             on_press:
                 root.nav_drawer.set_state("close")
                 root.screen_manager.current = "scr 3"
-
         OneLineListItem:
             text: "System Help"
             on_press:
                 root.nav_drawer.set_state("close")
                 root.screen_manager.current = "scr 4"
-
+        OneLineListItem:
+            text: "Completed Tasks"
+            on_press:
+                root.nav_drawer.set_state("close")
+                root.screen_manager.current = "scr 5"
 
 MDScreen:
 
@@ -41,7 +41,6 @@ MDScreen:
         title: "Ubraek"
         left_action_items: [["menu", lambda x: nav_drawer.set_state("open")]]
         
-
     MDNavigationLayout:
 
         MDScreenManager:
@@ -69,8 +68,6 @@ MDScreen:
                     elevation_normal: 12
                     pos_hint: {'x': .8, 'y': .04}
                     text_color: 1,1,1,1 
-
-
 
             MDScreen:
                 name: "scr 2"
@@ -115,73 +112,81 @@ MDScreen:
                 MDLabel:
                     text: "[b]System Help[/b]"
                     halign: "center"
-                    pos_hint: {'center_x': .5 , 'center_y': .7}
+                    pos_hint: {'center_x': .5 , 'center_y': .65}
                     markup: True
                 MDLabel:
-                    text: """Run the MainApp class to start the ToDo application. The main screen displays a list of tasks. Completed tasks are marked with strikethrough text. Click the "Create Task" button to open a dialog for adding new tasks. In the task creation dialog, enter the task details and choose a due date using the date picker. Click the "Save" button to add the task to the list. Tasks can be marked as complete or incomplete by checking/unchecking the checkbox next to each task. To delete a task, click the delete button next to the task."""
+                    text: "If you need any help, please feel free to reach out to us."
                     halign: "center"
                     pos_hint: {'center_x': .5 , 'center_y': .6}
-                MDLabel:
-                    text: """[b]Features[/b]\n Create new tasks with due dates. Mark tasks as complete or incomplete. Delete tasks.\n[b]Database[/b] \n The app uses a simple database module (database.py) for storing task information."""
-                    halign: "center"
-                    pos_hint: {'center_x': .5 , 'center_y': .4}
-                    markup: True
-                    
+
+            MDScreen:
+                name: "scr 5"
+                
+                ScrollView:
+                    pos_hint: {'center_y': .5, 'center_x': .5}
+                    size_hint: .9, .8
+
+                    MDList:
+                        id: container_completed
 
         MDNavigationDrawer:
             id: nav_drawer
-            radius: (0, 16, 16, 0)
 
             ContentNavigationDrawer:
                 screen_manager: screen_manager
                 nav_drawer: nav_drawer
 
-
-<DialogContent>:
+<DialogContent>
     orientation: "vertical"
-    spacing: "10dp"
-    size_hint: 1, None
-    height: "130dp"
+    spacing: "12dp"
+    size_hint_y: None
+    height: "300dp"
+    padding: "20dp"
 
-    GridLayout:
-        rows: 1
+    MDTextField:
+        id: task_text
+        hint_text: "Task"
+        helper_text: "Enter task here"
+        helper_text_mode: "on_focus"
+        size_hint_x: None
+        width: "300dp"
+        pos_hint: {'center_x': .5}
 
-        MDTextField:
-            id: task_text
-            hint_text: "Add Task..."
-            pos_hint: {"center_y": .4}
-            max_text_length: 50
-            on_text_validate: (app.add_task(task_text, date_text.text), app.close_dialog())
-
-        MDIconButton:
-            icon: 'calendar'
-            on_release: root.show_date_picker()
-            padding: '10dp'
-
-    MDLabel:
-        spacing: '10dp'
+    MDTextField:
         id: date_text
+        hint_text: "Due Date"
+        size_hint_x: None
+        width: "300dp"
+        pos_hint: {'center_x': .5}
+
+    MDRaisedButton:
+        text: "Set Due Date"
+        pos_hint: {'center_x': .5}
+        on_release: root.show_date_picker()
 
     BoxLayout:
-        orientation: 'horizontal'
+        size_hint_y: None
+        height: self.minimum_height
+        spacing: "12dp"
+        padding: "20dp"
 
         MDRaisedButton:
-            text: "SAVE"
-            on_release: (app.add_task(task_text, date_text.text), app.close_dialog())
-        MDFlatButton:
-            text: 'CANCEL'
+            text: "CANCEL"
             on_release: app.close_dialog()
+
+        MDRaisedButton:
+            text: "ADD TASK"
+            on_release:
+                app.add_task(task_text, date_text.text)
+                app.close_dialog()
 
 <ListItemWithCheckbox>:
     id: the_list_item
-    markup: True
-
-    LeftCheckbox:
+    check: check
+    on_release: self.parent.parent.set_current(self)
+    CheckboxLeftWidget:
         id: check
-        on_release: root.mark(check, the_list_item)
-
+        on_release: root.mark(check, root)
     IconRightWidget:
-        icon: 'trash-can-outline'
-        theme_text_color: "Custom"
-        text_color: 1, 0, 0, 1
-        on_release: root.delete_item(the_list_item)
+        icon: "delete"
+        on_release: root.delete_item(root)
